- Lots of small findbugs fixes.   - Also added some exclusions for a few things that are unavoidable.  See findbugs-filter.xml for details. - Fix for 14230: setDaemon throws exception in Selector thread startup. - Removed IdentityHashtable and replaced its usage with IdentityHashMap (it's about time:   this was leftover from JDK 1.1.6!)